# cli_req

./: .gitattributes  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  project.req  project.req.bak-req-v2  req-safety-acceptance.json  rust-toolchain.toml
.claude/: settings.json
.github/workflows/: ci.yml  release.yml  spec-review.yml
src/: cli.rs  errors.rs  help_text.rs  main.rs  mcp.rs  migrations.rs  model.rs  source_walk.rs  storage.rs  tui.rs  validate.rs  web.rs
src/commands/: add.rs  adopt.rs  audit.rs  batch.rs  brief.rs  check.rs  coverage.rs  delete.rs  diff.rs  doctor.rs  export.rs  help_cmd.rs  hooks.rs  import.rs  init.rs  link.rs  lint.rs  list.rs  migrate.rs  mod.rs  next.rs  precheck.rs  purpose.rs  renumber.rs  repair.rs  review.rs  safety.rs  safety_gov.rs  schema.rs  setup.rs  show.rs  split.rs  stale.rs  status.rs  test_cmd.rs  update.rs  validate_cmd.rs  validation.rs  version.rs
tests/: adopt.rs  cli.rs  concurrency.rs  content_hash.rs  coverage_boost.rs  defects.rs  edge_cases.rs  forward_compat.rs  gitignore.rs  mcp_tools.rs  migrations.rs  safety.rs  serve.rs  slice_a.rs  slice_b.rs  slice_c.rs  slice_g.rs  storage.rs  test_map.rs  v2_format.rs  validation.rs  validator.rs  worktree_hooks.rs
tests/common/: mod.rs
tests/fixtures/: v1_project.req
