[package]
name = "req-cli"
version = "0.4.0-rc.4"
edition = "2021"
description = "Managed requirements CLI for LLM agents and humans"
license = "MIT"
repository = "https://github.com/Barks944/cli_req"
readme = "README.md"
keywords = ["requirements", "cli", "agents", "llm", "traceability"]
categories = ["command-line-utilities", "development-tools"]
# Implements REQ-0021 (Rust + single static binary).

[[bin]]
name = "req"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "wrap_help", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
fs2 = "0.4"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
dialoguer = "0.11"
comfy-table = "7"
regex = "1"
once_cell = "1"
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
ignore = "0.4"


[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
